Change employee component

--- a/WebSPA/src/app/workTasks/work-task-add/work-task-add.component.html
+++ b/WebSPA/src/app/workTasks/work-task-add/work-task-add.component.html
@@ -1,4 +1,4 @@
-<div class="form-group">
+<!--<div class="form-group">
   <label>Название</label>
   <input class="form-control"
   [(ngModel)]="item.login" 
@@ -14,4 +14,4 @@
 </div>
 <button class="btn btn-outline-warning" (click)="add()">Добавить</button>
 <button class="btn btn-outline-danger" (click)="cancel()">Отмена</button>
-<a class="btn btn-outline-primary" routerLink="/workTasks/workTask-list">Назад</a>
+<a class="btn btn-outline-primary" routerLink="/workTasks/workTask-list">Назад</a>-->
