--- a/WebSPA/src/app/employees/employee-list/employee-list.component.html
+++ b/WebSPA/src/app/employees/employee-list/employee-list.component.html
@@ -4,11 +4,11 @@
     *ngFor = 'let item of items'>
       <img src="http://www.obltv.ru/upload/resize_cache/iblock/ea3/690_6900_1/cat.jpg" class="card-img-top">
       <div class="card-body">
-        <h5 class="card-title">{{item.firstName}} {{item.midlleName}} {{item.lastName}}</h5>
+        <h5 class="card-title">{{item.firstName}} {{item.middleName}} {{item.lastName}}</h5>
         <p class="card-text">Логин сотрудника - {{item.login}}</p>
         <p class="card-text">Пароль сотрудника - {{item.login}}</p>
         <p class="card-text">Должность сотрудника - {{item.role}}</p>
-        <button class="btn btn-outline-warning" (click)="deleteItem(item)">Удалить</button>
+        <button class="btn btn-outline-warning" (click)="delete(item)">Удалить</button>
         <a class="btn btn-primary" routerLink="/employees/employee-edit/{{item.id}}">Изменить</a>
       </div>
     </div>
