--- a/WebSPA/src/app/equipments/equipment-add/equipment-add.component.html
+++ b/WebSPA/src/app/equipments/equipment-add/equipment-add.component.html
@@ -1,4 +1,4 @@
-<div class="form-group">
+<!--<div class="form-group">
   <label>Название</label>
   <input class="form-control"
   [(ngModel)]="item.login" 
@@ -21,4 +21,4 @@
 </div>
 <button class="btn btn-outline-warning" (click)="add()">Добавить</button>
 <button class="btn btn-outline-danger" (click)="cancel()">Отмена</button>
-<a class="btn btn-outline-primary" routerLink="/equipments/equipment-list">Назад</a>
+<a class="btn btn-outline-primary" routerLink="/equipments/equipment-list">Назад</a>-->
