--- a/WebSPA/src/app/employees/employee/employee.component.html
+++ b/WebSPA/src/app/employees/employee/employee.component.html
@@ -1,9 +1,14 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-4">
+    <div class="left-menu">
       <app-employee-add></app-employee-add>
+      <div class="left-menu-btn" onclick="toggleMenu()">
+        <span></span>
+        <span></span>
+        <span></span>                 
+      </div>
     </div>
-    <div class="col-8">
+    <div class="col">
       <router-outlet></router-outlet>
     </div>
   </div>
