--- a/WebSPA/src/app/equipments/equipment-add/equipment-add.component.html
+++ b/WebSPA/src/app/equipments/equipment-add/equipment-add.component.html
@@ -1,24 +1,24 @@
-<!--<div class="form-group">
+<div class="form-group">
   <label>Название</label>
   <input class="form-control"
-  [(ngModel)]="item.login" 
+  [(ngModel)]="item.name" 
   [ngModelOptions]="{standalone: true}"
-  [(value)]="item.login">
+  [(value)]="item.name">
 </div>
 <div class="form-group">
   <label>Описание</label>
   <input class="form-control"
-  [(ngModel)]="item.password" 
+  [(ngModel)]="item.description" 
   [ngModelOptions]="{standalone: true}"
-  [(value)]="item.password">
+  [(value)]="item.description">
 </div>
 <div class="form-group">
   <label>Номер</label>
   <input class="form-control"
-  [(ngModel)]="item.firstName" 
+  [(ngModel)]="item.number" 
   [ngModelOptions]="{standalone: true}"
-  [(value)]="item.firstName">
+  [(value)]="item.number">
 </div>
 <button class="btn btn-outline-warning" (click)="add()">Добавить</button>
 <button class="btn btn-outline-danger" (click)="cancel()">Отмена</button>
-<a class="btn btn-outline-primary" routerLink="/equipments/equipment-list">Назад</a>-->
+<a class="btn btn-outline-primary" routerLink="/equipments/equipment-list">Назад</a>
