--- a/WebSPA/src/app/equipments/equipment/equipment.component.html
+++ b/WebSPA/src/app/equipments/equipment/equipment.component.html
@@ -1,9 +1,9 @@
-<div class="container">
+<div class="container-fluid">
   <div class="row">
-    <div class="col-4">
+    <div class="col-3">
       <app-equipment-add></app-equipment-add>
     </div>
-    <div class="col-8">
+    <div class="col-9">
       <router-outlet></router-outlet>
     </div>
   </div>
