--- a/WebSPA/src/app/workObjects/work-object-add/work-object-add.component.html
+++ b/WebSPA/src/app/workObjects/work-object-add/work-object-add.component.html
@@ -1,17 +1,17 @@
-<!--<div class="form-group">
+<div class="form-group">
   <label>Название</label>
   <input class="form-control"
-  [(ngModel)]="item.login" 
+  [(ngModel)]="item.name" 
   [ngModelOptions]="{standalone: true}"
-  [(value)]="item.login">
+  [(value)]="item.name">
 </div>
 <div class="form-group">
   <label>Описание</label>
   <input class="form-control"
-  [(ngModel)]="item.password" 
+  [(ngModel)]="item.description" 
   [ngModelOptions]="{standalone: true}"
-  [(value)]="item.password">
+  [(value)]="item.description">
 </div>
 <button class="btn btn-outline-warning" (click)="add()">Добавить</button>
 <button class="btn btn-outline-danger" (click)="cancel()">Отмена</button>
-<a class="btn btn-outline-primary" routerLink="/workObjects/work-object-list">Назад</a>-->
+<a class="btn btn-outline-primary" routerLink="/workObjects/work-object-list">Назад</a>
