--- a/WebSPA/src/app/workObjects/work-object-details/work-object-details.component.html
+++ b/WebSPA/src/app/workObjects/work-object-details/work-object-details.component.html
@@ -1,1 +1,14 @@
 <a class="btn btn-outline-primary" routerLink="/workObjects/work-object-list">Назад</a>
+<div class="container-fluid">
+    <div class="row">
+      <div class="col-3">
+        <app-employee-add></app-employee-add>
+      </div>
+      <div class="col-3">
+        <app-equipment-add></app-equipment-add>
+      </div>
+      <div class="col-6">
+        <router-outlet></router-outlet>
+      </div>
+    </div>
+</div>
