--- a/WebSPA/src/app/workObjects/work-object-list/work-object-list.component.html
+++ b/WebSPA/src/app/workObjects/work-object-list/work-object-list.component.html
@@ -1,13 +1,14 @@
 <div class="container">
   <div class="row">
-    <div class="card" style="width: 18rem;"
+    <div class="card col-6" style="width: 18rem;"
     *ngFor = 'let item of items'>
-      <img src="http://www.obltv.ru/upload/resize_cache/iblock/ea3/690_6900_1/cat.jpg" class="card-img-top">
+      <img src="https://avatars.mds.yandex.net/get-zen_doc/62917/pub_5c94a995cbbae312a039aa96_5c94f8b6bddee300b359e4f9/scale_600" class="card-img-top">
       <div class="card-body">
-        <h5 class="card-title">{{item.Name}}</h5>
+        <h5 class="card-title">{{item.name}}</h5>
         <p class="card-text">{{item.description}}</p>
-        <button class="btn btn-outline-warning" (click)="deleteItem(item)">Удалить</button>
-        <a class="btn btn-primary" routerLink="/workObjects/work-object-edit/{{item.id}}">Изменить</a>
+        <a class="btn btn-outline-primary" routerLink="/workObjects/work-object-details/{{item.id}}">Подробнее</a>
+        <a class="btn btn-outline-primary" routerLink="/workObjects/work-object-edit/{{item.id}}">Изменить</a>
+        <button class="btn btn-outline-danger" (click)="delete(item)">Удалить</button>
       </div>
     </div>
   </div>
