--- a/WebSPA/src/app/employees/employee/employee.component.html
+++ b/WebSPA/src/app/employees/employee/employee.component.html
@@ -8,7 +8,7 @@
         <span></span>                 
       </div>
     </div>
-    <div class="col">
+    <div class="col right-block">
       <router-outlet></router-outlet>
     </div>
   </div>
