--- a/WebSPA/src/app/employees/employee/employee.component.scss
+++ b/WebSPA/src/app/employees/employee/employee.component.scss
@@ -1,42 +1,40 @@
+@import "../../../styles.scss";
 $margin-top: 10.2vh;
 $color-add: rgba(24, 22, 22, 0.808);
 
 .container-fluid{
   padding: 1%;  //didn't understand 
   min-width: 551px;
+  min-height: 670px;  
 
   .row{
-    margin: $margin-top 0 0 0 !important;
-
-    @media (max-width: 551px) {
-      margin: 0 !important;
-    }
-
     .left-menu{
-      transition: .5s ease-in-out;
+      transition: left .5s ease-in-out;
       position: fixed;
       top: $margin-top;
-      width: 32vw;
-      left: -32vw;
+      width: 32vmax;
+      left: -32vmax;
       background-color: $color-add;
       height: 89.8vh;
       z-index: 1005;
       color: #fff;
-      min-width: 350px;
-      padding: 1%;
+      padding: 1%;      
+      @include adaptive-top-top(3.5vh);
 
       &-btn{
         width: 30px;
         height: 30px;
         position: fixed;
-        top: $margin-top + 5vh;
-        left: 1vw;
-        transition: .5s ease-in-out;
+        top: $margin-top + 2vh;
+        left: 1vmax;
+        transition: left .5s ease-in-out;
         transform: rotate(0deg);
         cursor: pointer;
 
+        @include adaptive-top-top(4vh);
+
         &-active{
-          left: 33vw;
+          left: 33vmax;
 
           span:nth-child(1){
             transform: rotate(135deg) translate(6px, -6px);
@@ -64,6 +62,11 @@ $color-add: rgba(24, 22, 22, 0.808);
       &-active{
         left: 0;
       }
+    }
+
+    .right-block{
+      margin-top: $margin-top !important;
+      @include adaptive-top-mrg;
     }
   }
 }
