--- a/WebSPA/src/styles.scss
+++ b/WebSPA/src/styles.scss
@@ -1,1 +1,34 @@
 /* You can add global styles to this file, and also import other style files */
+@mixin adaptive-top-mrg {
+  $i: 670px;
+  $j: 1vh;
+  @while $i > 190px {
+    @media (max-height: $i) {
+      margin-top: $margin-top + $j !important;
+    }
+    @if $i > 375px {
+      $j: $j + 1vh;
+    }
+    @if $i < 375px {
+      $j: $j + 3.5vh;
+    }    
+    $i: $i - 35px;    
+  }
+}
+
+@mixin adaptive-top-top($value) {
+  $i: 670px;
+  $j: 1vh;
+  @while $i > 190px {
+    @media (max-height: $i) {
+      top: $margin-top + $j !important;
+    }
+    @if $i > 375px {
+      $j: $j + 1vh;
+    }
+    @if $i < 375px {
+      $j: $j + $value;
+    }    
+    $i: $i - 35px;    
+  }
+}
