--- a/WebSPA/src/app/navbar/navbar.component.html
+++ b/WebSPA/src/app/navbar/navbar.component.html
@@ -8,6 +8,7 @@
       <a class="nav-item nav-link active" routerLink="/employees/employee-list">Сотрудники<span class="sr-only">(current)</span></a>
       <a class="nav-item nav-link active" routerLink="/equipments/equipment-list">Оборудование<span class="sr-only">(current)</span></a>
       <a class="nav-item nav-link active" routerLink="/workObjects/work-object-list">Объекты работ<span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link active" routerLink="/workTasks/work-task-list">Задачи(Временно)<span class="sr-only">(current)</span></a>
     </div>
   </div>
 </nav>
