--- a/WebSPA/src/app/workTasks/work-task-edit/work-task-edit.component.html
+++ b/WebSPA/src/app/workTasks/work-task-edit/work-task-edit.component.html
@@ -1,17 +1,17 @@
-<!--<div class="form-group">
+<div class="form-group">
   <label>Название</label>
   <input class="form-control"
-  [(ngModel)]="item.login" 
+  [(ngModel)]="item.name" 
   [ngModelOptions]="{standalone: true}"
-  [(value)]="item.login">
+  [(value)]="item.name">
 </div>
 <div class="form-group">
   <label>Описание</label>
   <textarea class="form-control" rows="3"
-  [(ngModel)]="item.password" 
+  [(ngModel)]="item.description" 
   [ngModelOptions]="{standalone: true}"
-  [(value)]="item.password"></textarea>
+  [(value)]="item.description"></textarea>
 </div>
 <button class="btn btn-outline-warning" (click)="edit()">Изменить</button>
 <button class="btn btn-outline-danger" (click)="cancel()">Отмена</button>
-<a class="btn btn-outline-primary" routerLink="/workTasks/workTask-list">Назад</a>-->
+<a class="btn btn-outline-primary" routerLink="/workTasks/workTask-list">Назад</a>
