--- a/WebSPA/src/app/workTasks/work-task-list/work-task-list.component.html
+++ b/WebSPA/src/app/workTasks/work-task-list/work-task-list.component.html
@@ -2,9 +2,9 @@
   <div class="row">
     <div class="card" style="width: 18rem;"
     *ngFor = 'let item of items'>
-      <img src="http://www.obltv.ru/upload/resize_cache/iblock/ea3/690_6900_1/cat.jpg" class="card-img-top">
+      <img src="https://tomatis-belarus.by/wp-content/uploads/2018/03/art-terapiya-dlya-beremennyh-4.jpg" class="card-img-top">
       <div class="card-body">
-        <h5 class="card-title">{{item.Name}}</h5>
+        <h5 class="card-title">{{item.name}}</h5>
         <p class="card-text">{{item.description}}</p>
         <button class="btn btn-outline-warning" (click)="deleteItem(item)">Удалить</button>
         <a class="btn btn-primary" routerLink="/workTasks/workTask-edit/{{item.id}}">Изменить</a>
