--- a/WebSPA/src/app/workObjectsDetails/work-object-details/work-object-details.component.html
+++ b/WebSPA/src/app/workObjectsDetails/work-object-details/work-object-details.component.html
@@ -1,12 +1,10 @@
 <div class="container-fluid">
     <div class="row">
-        <div class="col-3">
-            <a class="nav-item nav-link active" routerLink="/sidebar/addEmployee">Сотрудники<span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link active" routerLink="/sidebar/addEquipment">Оборудование<span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link active" routerLink="/sidebar/addWorkTask">Задачи<span class="sr-only">(current)</span></a>
+        <div class="col-2">
+            <app-work-object-details-navbar [workObjectId]='workObjectId'></app-work-object-details-navbar>
         </div>
-        <div class="col-9">
-            body
+        <div class="col-10">
+            <router-outlet></router-outlet>
         </div>
     </div>
 </div>
