--- a/WebSPA/src/app/workTasks/work-task/work-task.component.html
+++ b/WebSPA/src/app/workTasks/work-task/work-task.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-4">
-      <app-work-task-add></app-work-task-add>
+      <app-work-task-add [workObjectId]='workObjectId'></app-work-task-add>
     </div>
     <div class="col-8">
       <router-outlet></router-outlet>
