--- a/WebSPA/src/app/workTasks/work-task-list/work-task-list.component.html
+++ b/WebSPA/src/app/workTasks/work-task-list/work-task-list.component.html
@@ -1,9 +1,4 @@
 <div class="container">
-  <div *ngIf="hasWorkObjecId">
-    <select class="custom-select">
-      <option *ngFor='let object of list' value="{{object.id}}">{{object.name}}</option>
-    </select>
-  </div>
   <div class="row">
     <div class="card" style="width: 18rem;"
     *ngFor = 'let item of items'>
@@ -11,7 +6,7 @@
       <div class="card-body">
         <h5 class="card-title">{{item.name}}</h5>
         <p class="card-text">{{item.description}}</p>
-        <button class="btn btn-outline-warning" (click)="deleteItem(item)">Удалить</button>
+        <button class="btn btn-outline-warning" (click)="delete(item)">Удалить</button>
         <a class="btn btn-primary" routerLink="/workTasks/workTask-edit/{{item.id}}">Изменить</a>
       </div>
     </div>
