--- a/WebSPA/src/app/equipments/equipment-list/equipment-list.component.html
+++ b/WebSPA/src/app/equipments/equipment-list/equipment-list.component.html
@@ -3,7 +3,7 @@
     <div class="dropdown">
       <button class="btn btn-secondary dropdown-toggle" type="button"
       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      Добавить сотрудника на объект
+      Добавить оборудование на объект
       </button>
       <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
         <div *ngFor='let item of list'>
