--- a/WebSPA/src/app/workTasks/work-task-edit/work-task-edit.component.html
+++ b/WebSPA/src/app/workTasks/work-task-edit/work-task-edit.component.html
@@ -14,4 +14,4 @@
 </div>
 <button class="btn btn-outline-warning" (click)="edit()">Изменить</button>
 <button class="btn btn-outline-danger" (click)="cancel()">Отмена</button>
-<a class="btn btn-outline-primary" routerLink="/workTasks/workTask-list">Назад</a>
+<a class="btn btn-outline-primary" routerLink="/details/{{workObjectId}}/work-task-list/{{workObjectId}}">Назад</a>
