--- a/WebSPA/src/app/workTasks/work-task/work-task.component.html
+++ b/WebSPA/src/app/workTasks/work-task/work-task.component.html
@@ -1,10 +1,49 @@
-<div class="container">
-  <div class="row">
-    <div class="col-4">
-      <app-work-task-add [workObjectId]='workObjectId'></app-work-task-add>
-    </div>
-    <div class="col-8">
-      <router-outlet></router-outlet>
-    </div>
-  </div>
-</div>
+<h1>Список задача</h1>
+<input type="button" value="Добавить" class="btn btn-outline-primary" (click)="add()" />
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <td>Название</td>
+      <td>Описание</td>
+      <td></td>
+      <td></td>
+    </tr>
+  </thead>
+    <tbody>
+      <tr *ngFor="let item of items">
+        <ng-template [ngTemplateOutlet]="loadTemplate(item)" 
+                    [ngTemplateOutletContext]="{ $implicit: item}">
+        </ng-template>
+      </tr>
+    </tbody>
+</table>
+<div>{{statusMessage}}</div>
+   
+   
+<!--шаблон для чтения-->
+<ng-template #readTemplate let-item>
+  <td>{{item.name}}</td>
+  <td>{{item.description}}</td>
+  <td>
+      <input type="button" value="Изменить" class="btn btn-default" (click)="edit(item)" />
+  </td>
+  <td>
+      <input type="button" value="Удалить" (click)="delete(item)" class="btn btn-danger" />
+  </td>
+</ng-template>
+  
+<!--шаблон для редактирования-->
+<ng-template #editTemplate>
+  <td>
+      <input type="text" [(ngModel)]="editedItem.name" class="form-control" />
+  </td>
+  <td>
+      <input type="text" [(ngModel)]="editedItem.description" class="form-control" />
+  </td>
+  <td>
+      <input type="button" value="Сохранить" (click)="save()" class="btn btn-success" />
+  </td>
+  <td>
+      <input type="button" value="Отмена" (click)="cancel()" class="btn btn-warning" />
+  </td>
+</ng-template>
