--- a/WebSPA/src/app/employees/employee-add/employee-add.component.html
+++ b/WebSPA/src/app/employees/employee-add/employee-add.component.html
@@ -45,6 +45,8 @@
     [ngModelOptions]="{standalone: true}"
     [(value)]="item.lastName">
   </div>
-  <button class="btn btn-outline-success" (click)="add()">Добавить</button>
-  <button class="btn btn-outline-info" (click)="cancel()" onclick="toggleMenu()">Отмена</button>
+  <div class="btn-group btn-group-lg btn-group-block">
+      <button class="btn btn-success" (click)="add()">Добавить</button>
+      <button class="btn btn-outline-success" (click)="cancel()" onclick="toggleMenu()">Отмена</button>
+  </div>  
 </form>
