--- a/WebSPA/src/app/workTasks/work-task-edit/work-task-edit.component.html
+++ b/WebSPA/src/app/workTasks/work-task-edit/work-task-edit.component.html
@@ -13,7 +13,7 @@
     [ngModelOptions]="{standalone: true}"
     [(value)]="item.description"></textarea>
   </div>
-  <button class="btn btn-outline-warning" (click)="edit()">Изменить</button>
-  <button class="btn btn-outline-danger" (click)="cancel()">Отмена</button>
+  <button class="btn btn-primary" (click)="edit()">Изменить</button>
+  <button class="btn btn-outline-primary" (click)="cancel()">Отмена</button>
   <a class="btn btn-outline-primary" routerLink="/workTasks/workTask-list">Назад</a>
 </div>
