--- a/WebSPA/src/app/employees/employee-edit/employee-edit.component.html
+++ b/WebSPA/src/app/employees/employee-edit/employee-edit.component.html
@@ -1,32 +1,21 @@
 <form class="container">
   <div class="form-group">
     <label>Логин</label>
-    <input class="form-control"
-    readonly disabled
-    [(ngModel)]="item.id" 
-    [ngModelOptions]="{standalone: true}"
-    [(value)]="item.login">
+    <input class="form-control" readonly disabled [(ngModel)]="item.id" [ngModelOptions]="{standalone: true}"
+      [(value)]="item.login">
   </div>
   <div class="form-group">
     <label>Логин</label>
-    <input class="form-control"
-    [(ngModel)]="item.login" 
-    [ngModelOptions]="{standalone: true}"
-    [(value)]="item.login">
+    <input class="form-control" [(ngModel)]="item.login" [ngModelOptions]="{standalone: true}" [(value)]="item.login">
   </div>
   <div class="form-group">
     <label>Пароль</label>
-    <input class="form-control"
-    [(ngModel)]="item.password" 
-    [ngModelOptions]="{standalone: true}"
-    [(value)]="item.password">
+    <input class="form-control" [(ngModel)]="item.password" [ngModelOptions]="{standalone: true}"
+      [(value)]="item.password">
   </div>
-  <div class="form-group"> 
+  <div class="form-group">
     <label>Должность</label>
-    <select class="form-control"
-    [(ngModel)]="item.role" 
-    [ngModelOptions]="{standalone: true}"
-    [(value)]="item.role">
+    <select class="form-control" [(ngModel)]="item.role" [ngModelOptions]="{standalone: true}" [(value)]="item.role">
       <option value="Бригадир">Бригадир</option>
       <option value="Мастер">Мастер</option>
       <option value="Оператор">Оператор</option>
@@ -34,26 +23,22 @@
   </div>
   <div class="form-group">
     <label>Имя</label>
-    <input class="form-control"
-    [(ngModel)]="item.firstName" 
-    [ngModelOptions]="{standalone: true}"
-    [(value)]="item.firstName">
+    <input class="form-control" [(ngModel)]="item.firstName" [ngModelOptions]="{standalone: true}"
+      [(value)]="item.firstName">
   </div>
   <div class="form-group">
     <label>Отчетсво</label>
-    <input class="form-control"
-    [(ngModel)]="item.middleName" 
-    [ngModelOptions]="{standalone: true}"
-    [(value)]="item.middleName">
+    <input class="form-control" [(ngModel)]="item.middleName" [ngModelOptions]="{standalone: true}"
+      [(value)]="item.middleName">
   </div>
   <div class="form-group">
     <label>Фамилия</label>
-    <input class="form-control"
-    [(ngModel)]="item.lastName" 
-    [ngModelOptions]="{standalone: true}"
-    [(value)]="item.lastName">
+    <input class="form-control" [(ngModel)]="item.lastName" [ngModelOptions]="{standalone: true}"
+      [(value)]="item.lastName">
   </div>
-  <button class="btn btn-outline-warning" (click)="edit()">Изменить</button>
-  <button class="btn btn-outline-danger" (click)="cancel()">Отмена</button>
-  <a class="btn btn-outline-primary" routerLink="/employees/employee-list">Назад</a>
+  <div class="btn-group btn-group-md btn-group-block">
+    <button class="btn btn-primary" (click)="edit()">Изменить</button>
+    <button class="btn btn-outline-primary" (click)="cancel()">Отмена</button>
+    <a class="btn btn-outline-primary" routerLink="/employees/employee-list">Назад</a>
+  </div>
 </form>
