--- a/WebSPA/src/app/equipments/equipment-list/equipment-list.component.html
+++ b/WebSPA/src/app/equipments/equipment-list/equipment-list.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="container-fluid drop">
-    <div class="row" *ngIf="hasWorkObjecId">     
+    <div class="row" *ngIf="hasWorkObjecId">
       <div *ngFor='let item of list' class="card col-xl-3 col-lg-4 col-md-4 col-xs-7 col-8" style="width: 18rem;">
         <img
           src="https://img11.postila.ru/resize?w=660&src=%2Fdata%2F88%2F58%2Fcb%2F9b%2F8858cb9b026ed9d5864196f70c75af506f0ccbf88839b621487395c86e99e962.jpg"
@@ -9,13 +9,13 @@
           <h5 class="card-title">{{item.number}}</h5>
           <p class="card-text">{{item.name}}</p>
           <p class="card-text">{{item.description}}</p>
-          <button class="btn btn-outline-warning" (click)="addToWorkObject(item)">Добавить</button>
+          <button class="btn btn-primary only-btn" (click)="addToWorkObject(item)">Добавить</button>
         </div>
       </div>
     </div>
     <a href="javascript: void(0)" class="krest" onclick="toggleDrop()"><img
-      src="https://cdn.icon-icons.com/icons2/950/PNG/512/cross-symbol_icon-icons.com_74149.png" width="25px"
-      height="25px" alt="Krest"></a>
+        src="https://cdn.icon-icons.com/icons2/950/PNG/512/cross-symbol_icon-icons.com_74149.png" width="25px"
+        height="25px" alt="Krest"></a>
   </div>
 
 
@@ -35,12 +35,12 @@
           <h5 class="card-title">{{item.number}}</h5>
           <p class="card-text">{{item.name}}</p>
           <p class="card-text">{{item.description}}</p>
-          <button class="btn btn-outline-warning" (click)="deleteFromObject(item)">Удалить c объекта</button>
+          <button class="btn btn-primary only-btn" (click)="deleteFromObject(item)">Удалить c объекта</button>
         </div>
       </div>
     </ng-template>
     <ng-template #allItems>
-      <div class="card" style="width: 18rem;" *ngFor='let item of items'>
+      <div class="card col-xl-3 col-lg-4 col-md-4 col-xs-7 col-8" style="width: 18rem;" *ngFor='let item of items'>
         <img
           src="https://img11.postila.ru/resize?w=660&src=%2Fdata%2F88%2F58%2Fcb%2F9b%2F8858cb9b026ed9d5864196f70c75af506f0ccbf88839b621487395c86e99e962.jpg"
           class="card-img-top">
@@ -48,8 +48,10 @@
           <h5 class="card-title">{{item.number}}</h5>
           <p class="card-text">{{item.name}}</p>
           <p class="card-text">{{item.description}}</p>
-          <button class="btn btn-outline-warning" (click)="delete(item)">Удалить</button>
-          <a class="btn btn-primary" routerLink="/equipments/equipment-edit/{{item.id}}">Изменить</a>
+          <div class="btn-group only-btn btn-group-md btn-group-block">
+            <a class="btn btn-primary" routerLink="/equipments/equipment-edit/{{item.id}}">Изменить</a>
+            <button class="btn btn-outline-primary" (click)="delete(item)">Удалить</button>
+          </div>
         </div>
       </div>
     </ng-template>
