--- a/WebSPA/src/app/workObjects/work-object-add/work-object-add.component.html
+++ b/WebSPA/src/app/workObjects/work-object-add/work-object-add.component.html
@@ -13,6 +13,8 @@
     [ngModelOptions]="{standalone: true}"
     [(value)]="item.description">
   </div>
-  <button class="btn btn-outline-warning" (click)="add()">Добавить</button>
-  <button class="btn btn-outline-danger" (click)="cancel()" onclick="toggleMenu()">Отмена</button>
+  <div class="btn-group btn-group-lg btn-group-block">
+      <button class="btn btn-success" (click)="add()">Добавить</button>
+      <button class="btn btn-outline-success" (click)="cancel()" onclick="toggleMenu()">Отмена</button>
+  </div>  
 </form>
