--- a/WebSPA/src/app/workObjects/work-object-edit/work-object-edit.component.html
+++ b/WebSPA/src/app/workObjects/work-object-edit/work-object-edit.component.html
@@ -1,19 +1,16 @@
 <form class="container">
   <div class="form-group">
     <label>Название</label>
-    <input class="form-control"
-    [(ngModel)]="item.name" 
-    [ngModelOptions]="{standalone: true}"
-    [(value)]="item.name">
+    <input class="form-control" [(ngModel)]="item.name" [ngModelOptions]="{standalone: true}" [(value)]="item.name">
   </div>
   <div class="form-group">
     <label>Описание</label>
-    <textarea class="form-control" rows="3"
-    [(ngModel)]="item.description" 
-    [ngModelOptions]="{standalone: true}"
-    [(value)]="item.description"></textarea>
+    <textarea class="form-control" rows="3" [(ngModel)]="item.description" [ngModelOptions]="{standalone: true}"
+      [(value)]="item.description"></textarea>
   </div>
-  <button class="btn btn-outline-warning" (click)="edit()">Изменить</button>
-  <button class="btn btn-outline-danger" (click)="cancel()">Отмена</button>
-  <a class="btn btn-outline-primary" routerLink="/workObjects/work-object-list">Назад</a>
+  <div class="btn-group btn-group-md btn-group-block">
+    <button class="btn btn-primary" (click)="edit()">Изменить</button>
+    <button class="btn btn-outline-primary" (click)="cancel()">Отмена</button>
+    <a class="btn btn-outline-primary" routerLink="/workObjects/work-object-list">Назад</a>
+  </div>
 </form>
