--- a/WebSPA/src/app/workTasks/work-task-add/work-task-add.component.html
+++ b/WebSPA/src/app/workTasks/work-task-add/work-task-add.component.html
@@ -1,16 +1,13 @@
 <div class="form-group">
   <label>Название</label>
-  <input class="form-control"
-  [(ngModel)]="item.name" 
-  [ngModelOptions]="{standalone: true}"
-  [(value)]="item.name">
+  <input class="form-control" [(ngModel)]="item.name" [ngModelOptions]="{standalone: true}" [(value)]="item.name">
 </div>
 <div class="form-group">
   <label>Описание</label>
-  <input class="form-control"
-  [(ngModel)]="item.description" 
-  [ngModelOptions]="{standalone: true}"
-  [(value)]="item.description">
+  <input class="form-control" [(ngModel)]="item.description" [ngModelOptions]="{standalone: true}"
+    [(value)]="item.description">
 </div>
-<button class="btn btn-outline-warning" (click)="add()">Добавить</button>
-<button class="btn btn-outline-danger" (click)="cancel()" onclick="toggleMenu()">Отмена</button>
+<div class="btn-group btn-group-lg btn-group-block">
+  <button class="btn btn-success" (click)="add()">Добавить</button>
+  <button class="btn btn-outline-success" (click)="cancel()" onclick="toggleMenu()">Отмена</button>
+</div>
