fixed some changes

--- a/WebSPA/src/app/employees/employee-list/employee-list.component.html
+++ b/WebSPA/src/app/employees/employee-list/employee-list.component.html
@@ -14,12 +14,12 @@
     </div>
     <a href="javascript: void(0)" class="krest" onclick="toggleDrop()"><img
         src="https://cdn.icon-icons.com/icons2/950/PNG/512/cross-symbol_icon-icons.com_74149.png" width="25px"
-        height="25px" alt="Krest"></a>
+        height="25px" alt="krest"></a>
   </div>
   <div class="row">
     <ng-template [ngIf]="hasWorkObjecId" [ngIfElse]="allItems">
       <div class="card add-card col-xl-3 col-lg-4 col-md-4 col-xs-7 col-8" style="width: 18rem;" onclick="toggleDrop()">
-        <img src="https://icon-icons.com/icons2/1839/PNG/256/womanglasses21_116010.png" class="card-img-top">
+        <img src="http://promstroyka.by/tmp/man1.jpg" class="card-img-top">
         <div class="card-body">
           <h5>Добавить сотрудника</h5>
         </div>
