--- a/WebSPA/src/app/employees/employee/employee.component.html
+++ b/WebSPA/src/app/employees/employee/employee.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="left-menu">
-      <app-employee-add></app-employee-add>
+      <app-employee-add class="add"></app-employee-add>
       <div class="left-menu-btn" onclick="toggleMenu()">
         <span></span>
         <span></span>
