--- a/WebSPA/src/app/equipments/equipment/equipment.component.html
+++ b/WebSPA/src/app/equipments/equipment/equipment.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="left-menu">
-      <app-equipment-add></app-equipment-add>
+      <app-equipment-add class="add"></app-equipment-add>
       <div class="left-menu-btn" onclick="toggleMenu()">
         <span></span>
         <span></span>
