--- a/WebSPA/src/app/employees/employee/employee.component.scss
+++ b/WebSPA/src/app/employees/employee/employee.component.scss
@@ -21,6 +21,16 @@ $color-add: rgba(24, 22, 22, 0.808);
       padding: 1%; 
       @include adaptive-top-top(3.5vh);
 
+      app-employee-add, app-equipment-add, app-work-object-add{
+        &.add{
+          display: none;
+        }
+
+        &.active{
+          display: block;
+        }
+      }
+
       &-btn{        
         width: 30px;
         height: 30px;
