--- a/WebSPA/src/app/equipments/equipment-add/equipment-add.component.html
+++ b/WebSPA/src/app/equipments/equipment-add/equipment-add.component.html
@@ -1,4 +1,4 @@
-<form>
+<form class="container">
   <div class="form-group">
     <label>Название</label>
     <input class="form-control" [(ngModel)]="item.name" [ngModelOptions]="{standalone: true}" [(value)]="item.name">
