--- a/WebSPA/src/app/workObjects/work-object/work-object.component.html
+++ b/WebSPA/src/app/workObjects/work-object/work-object.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="left-menu">
-      <app-work-object-add></app-work-object-add>
+      <app-work-object-add class="add"></app-work-object-add>
       <div class="left-menu-btn" onclick="toggleMenu()">
         <span></span>
         <span></span>
