--- a/WebSPA/src/app/workObjectsDetails/work-object-details-navbar/work-object-details-navbar.component.scss
+++ b/WebSPA/src/app/workObjectsDetails/work-object-details-navbar/work-object-details-navbar.component.scss
@@ -4,5 +4,10 @@
   .btn{
     background-color: #303842;
     font-size: 1.5rem;
+    transition: 0.1s ease;
+
+    &:hover{
+      transform: scale(1.03);
+    }
   }
 }
